--- a/style.css
+++ b/style.css
@@ -125,13 +125,13 @@ nav .menu-btn,
   display: none;
 }
 nav .menu-btn{
-  color: #4070f4;
+  color: #0E2431;
 }
 nav.sticky .menu-btn{
-  color: #f7f1e3;
+  color: #0E2431;
 }
 .navbar .menu .menu-btn{
-  color: #f7f1e3;
+  color: #0E2431;
 }
 
 /* home section styling */
@@ -442,6 +442,10 @@ footer .text span a:hover{
   }
 }
 @media (max-width: 1000px) {
+  .about .left img{
+    height: 500px;
+    width: 300px;
+  }
   .about .about-details{
     justify-content: center;
     flex-direction: column;
@@ -462,8 +466,9 @@ footer .text span a:hover{
 }
 @media (max-width: 900px) {
   .about .left img{
-    height: 350px;
+    height: 400px;
     width: 350px;
+    
   }
 }
 
